--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,12 +1,11 @@
 .header {
-    margin-bottom: 3rem;
-    box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
-        0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+    box-shadow: 0px 2px 4px -1px rgba(99, 99, 99, 0.2),
+        0px 4px 5px 0px rgba(80, 80, 80, 0.14), 0px 1px 10px 0px rgb(0 0 0 / 12%);
 }
 
 .header-img {
-    max-width: 135px;
-    height: 70px;
+    max-width: 115px;
+    height: 50px;
 }
 
 a.nav-link {
@@ -21,4 +20,20 @@ a.nav-link {
 a.nav-link:hover {
     font-weight: 500;
     color: rgb(37, 36, 36) !important;
+    border-bottom: solid 1px;
+    transition: border-bottom 0.5s ease 0s;
+}
+
+a.active.nav-link.active {
+    font-weight: 500;
+    color: rgb(37, 36, 36) !important;
+    border-bottom: solid 1px;
+}
+
+.container-bg {
+    border-radius: 9px;
+}
+
+.footer {
+    color: white;
 }
