--- a/src/css/inventory.css
+++ b/src/css/inventory.css
@@ -15,3 +15,9 @@
 .p-dropdown-label:not(.p-placeholder) {
     text-transform: uppercase;
 }
+
+.error-message {
+    margin-top: 10px;
+    font-size: 1.2rem;
+    color: brown;
+}
