--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,4 +1,5 @@
 .header {
+    background: #ffffff;
     box-shadow: 0px 2px 4px -1px rgba(99, 99, 99, 0.2),
         0px 4px 5px 0px rgba(80, 80, 80, 0.14), 0px 1px 10px 0px rgb(0 0 0 / 12%);
 }
